fix minor issues with the cards make cards full height. fix layout issues related to the title

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,6 +21,7 @@ header p {
 main {
 	display: flex;
 	flex-wrap: wrap;
+	align-items: stretch;
 }
 
 .code-card {
@@ -32,15 +33,17 @@ main {
 }
 .code-card section {
 	border: 2px dashed white;
+	height: 100%;
 	border-radius: 10px;
 	padding: 10px;
 	margin: 10px 0px;
 	position: relative;
+	display: flex;
+	flex-direction: column;
 }
 .code-card section h2 {
-	position: absolute;
-	top: -25px;
-	width: calc(100% - 40px);
+	margin: -35px 0 0 0;
+	width: calc(100% - 15px);
 	border: 2px solid white;
 	background-color: var(--color-bg);
 	font-size: 200%;
@@ -52,6 +55,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	height: max-content;
+	flex: 1;
 }
 .code-card section div p {
 	margin: 5px 0px;
@@ -63,6 +67,7 @@ main {
 	background-image: linear-gradient(var(--dark-code-bg), var(--light-code-bg));
 	padding: 20px 10px;
 	border-radius: 10px;
+	user-select: all;
 }
 
 footer {
@@ -70,12 +75,12 @@ footer {
 	margin: 25px 0 50px 0;
 }
 @media screen and (max-width: 991px) {
-	section {
+	.code-card {
 		width: 50%;
 	}
 }
 @media screen and (max-width: 768px) {
-	section {
+	.code-card {
 		width: 100%;
 	}
 }
